# zanzibar

./: .env.example  .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
psql-toasty/: history.toml
psql-toasty/migrations/: 0000_migration.sql
psql-toasty/snapshots/: 0000_snapshot.toml
src/: lib.rs  main.rs  toasty_database.rs
src/models/: mod.rs  rbac.rs
src/zanzibar/: mod.rs
